# BetterOS

./: .gitignore  EAS_UPDATES_GUIDE.md  TECHNICAL_DOCS.md  app.config.js  app.json  eas.json  package-lock.json  package.json  test-backend.js
app/: _layout.tsx  about.tsx  ai-customization.tsx  appearance-settings.tsx  chat.tsx  crew-chat.tsx  daily-standup.tsx  delete-account.tsx  goals-settings.tsx  notification-settings.tsx  orbit-settings.tsx  realignment.tsx  report-issue.tsx  subscription-settings.tsx  support.tsx  voice-settings.tsx
backend/: AUTO_KNOWLEDGE_BASE.md  CREWAI_SETUP.md  RAG_README.md  REALTIME_FIX.md  YOUTUBE_API_SETUP.md  package-lock.json  package.json  render.yaml  run-migration.js  test-embedding.js
backend/goal_crew/: README.md  pyproject.toml
backend/goal_crew/src/goal_crew/: crew.py  main.py
backend/goal_crew/src/goal_crew/config/: agents.yaml  tasks.yaml
components/: Avatar.tsx  ChatInterface.tsx  ConversationList.tsx  CreateCoachModal.tsx  CustomerCenter.tsx  DailyCheckInModal.tsx  DailyRitualsModal.tsx  LongTermGoalModal.tsx  ModeDial.tsx  ModeSwitcher.tsx  OnboardingInterview.tsx  Paywall.tsx  RealignmentButton.tsx  SubscriptionGate.tsx  TodaysGoalsModal.tsx  VoiceCallModal.tsx  WeeklyCheckInModal.tsx  WeeklyGoalsModal.tsx
constants/: modes.ts  theme.ts
contexts/: CoachContext.tsx  OrbitContext.tsx  SubscriptionContext.tsx  TextSizeContext.tsx  ThemeContext.tsx
hooks/: use-responsive-text.ts  use-theme.ts
legal/: PRIVACY_POLICY.md  TERMS_AND_CONDITIONS.md
services/: api.ts  auth.ts  backend.ts  crew.ts  database.ts  (+6 more)
(+28 files in other folders)
