[project]
name = "goal_crew"
version = "0.1.0"
description = "goal_crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,tools]==1.8.1",
]

[project.scripts]
goal_crew = "goal_crew.main:run"
run_crew = "goal_crew.main:run"
train = "goal_crew.main:train"
replay = "goal_crew.main:replay"
test = "goal_crew.main:test"
run_with_trigger = "goal_crew.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
